--- a/src/pages/sign_up__Page/SignUp.module.css
+++ b/src/pages/sign_up__Page/SignUp.module.css
@@ -6,6 +6,7 @@
 }
 
 .logInMain {
+  border: solid 2px rgb(51, 51, 51);
   padding: 40px 50px 60px;
   max-width: 450px;
   margin: 0 auto;
@@ -34,7 +35,7 @@
   font-size: 28px;
   padding-bottom: 7px;
 
-  border-bottom: 2px solid rgb(0, 225, 255);
+  border-bottom: 2px solid #ffcc00;
 }
 
 .passwordWrap {
@@ -69,7 +70,7 @@
 .btnSend {
   color: white;
   font-size: 22px;
-  background-color: #1058fe;
+  background-color: #ffcc00;
   box-shadow: 0px 2px 10px 0px #0000004d;
   padding: 10px;
   border: none;
@@ -79,6 +80,9 @@
   justify-content: center;
   margin: 60px auto 0;
   cursor: pointer;
+}
+.btnSend:active{
+  background-color: #c69f00;
 }
 
 .show {
