--- a/src/pages/questionBlock__Page/QuestionBlock.module.css
+++ b/src/pages/questionBlock__Page/QuestionBlock.module.css
@@ -6,13 +6,32 @@
 }
 
 .btn {
-  width: 50%;
   background-color: #ffcc00;
   border: none;
   border-radius: 5px;
-  padding: 10px;
+  padding: 15px;
   font-size: 18px;
   font-weight: 800;
+  display: block;
   margin: 0 auto;
   cursor: pointer;
+}
+
+.card {
+  width: 100%;
+  height: 350px;
+  border: 2px solid #333333;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  color: #333333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.input {
+  outline: none;
+  width: 100%;
+  font-size: 24px;
 }
